--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Task Manager</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <style>
     *{
       margin:0;
@@ -14,6 +15,12 @@
 
     html{
       font-size: 62.5%;
+      font-family: 'Roboto', sans-serif;
+    }
+
+    :root{
+      --brandColor: #3551d5;
+      --darkBrand: #243898;
     }
   </style>
 </head>
